test/functions/deitz/test_var_function_access.good
test_var_function_access.chpl:5: In function 'bar':
test_var_function_access.chpl:6: error: illegal return expression in var function
